crates/jig-cli/tests/snapshots/auth_login_integration__auth_login_bad_iss.snap
---
source: crates/jig-cli/tests/auth_login_integration.rs
expression: redact_ids(&redact_port(&run.stdout))
---
jig auth --login · http://127.0.0.1:PORT/mcp
resource http://127.0.0.1:PORT/mcp · MCP auth spec 2025-06-18

  result: FAILED at step 8 of 8 — Authorization response

Flow trace
   1 ✓ PASS  Unauthenticated challenge      the server challenged an unauthenticated `initialize` with HTTP 401 and pointed at its resource metadata (http://127.0.0.1:PORT/.well-known/oauth-protected-resource)  [MCP 2025-06-18 · RFC 9728 §5.1]
   2 ✓ PASS  Protected Resource Metadata    fetched from http://127.0.0.1:PORT/.well-known/oauth-protected-resource: resource=http://127.0.0.1:PORT/mcp, authorization_servers=[http://127.0.0.1:PORT], scopes_supported=[mcp:tools, mcp:resources]  [RFC 9728 §3]
   3 ✓ PASS  Authorization Server Metadata  fetched from http://127.0.0.1:PORT/.well-known/oauth-authorization-server: issuer=http://127.0.0.1:PORT, code_challenge_methods_supported=[S256], registration_endpoint=present  [RFC 8414 §3]
   4 ✓ PASS  PKCE S256                      generated a 43-character code verifier from the system CSPRNG and its S256 challenge; `state` is an independent 256-bit nonce  [RFC 7636 §4.1–§4.2]
   5 ✓ PASS  Loopback redirect              listening for the authorization response on http://127.0.0.1:PORT/jig/callback  [RFC 8252 §7.3 · MCP 2025-06-18 (redirect URIs MUST be localhost or HTTPS)]
   6 ✓ PASS  Client identity                registered dynamically at http://127.0.0.1:PORT/register as a public native client (token_endpoint_auth_method=none, redirect_uris=[http://127.0.0.1:PORT/jig/callback]) → client_id `jig-dcr-client-N`  [RFC 7591 §3.1–§3.2.1]
   7 ✓ PASS  Authorization request          sent response_type=code with code_challenge_method=S256, a CSPRNG `state`, resource=http://127.0.0.1:PORT/mcp, scope=mcp:tools mcp:resources — --no-browser: the URL was printed, not opened  [OAuth 2.1 §4.1.1 · RFC 7636 §4.3 · RFC 8707 §2]
   8 ✗ FAIL  Authorization response         the authorization response's `iss` is `https://mixup.example.net` but the authorization server metadata declares `issuer` `http://127.0.0.1:PORT`. RFC 9207 §2.4 requires the client to reject the response and not proceed with the grant — a mismatch is the signature of an authorization-server mix-up attack.  [RFC 9207 §2.4]

The flow stopped at step 8 (Authorization response). No authenticated session was established.

Secrets: the access token, refresh token, authorization code and PKCE verifier are not printed here, are not in --json, and are redacted in the tap. `--token-out <file>` is the only way any of them reaches disk.
Run `jig auth --http <url>` without --login to grade the discoverable auth surface and see which requirement is missing.
