crates/jig-cli/tests/snapshots/auth_login_integration__auth_login_happy.snap
---
source: crates/jig-cli/tests/auth_login_integration.rs
expression: redact_ids(&redact_port(&run.stdout))
---
jig auth --login · http://127.0.0.1:PORT/mcp
resource http://127.0.0.1:PORT/mcp · MCP auth spec 2025-06-18

  result: AUTHENTICATED — the OAuth 2.1 authorization-code flow completed and the token opens an MCP session

Flow trace
   1 ✓ PASS  Unauthenticated challenge      the server challenged an unauthenticated `initialize` with HTTP 401 and pointed at its resource metadata (http://127.0.0.1:PORT/.well-known/oauth-protected-resource)  [MCP 2025-06-18 · RFC 9728 §5.1]
   2 ✓ PASS  Protected Resource Metadata    fetched from http://127.0.0.1:PORT/.well-known/oauth-protected-resource: resource=http://127.0.0.1:PORT/mcp, authorization_servers=[http://127.0.0.1:PORT], scopes_supported=[mcp:tools, mcp:resources]  [RFC 9728 §3]
   3 ✓ PASS  Authorization Server Metadata  fetched from http://127.0.0.1:PORT/.well-known/oauth-authorization-server: issuer=http://127.0.0.1:PORT, code_challenge_methods_supported=[S256], registration_endpoint=present  [RFC 8414 §3]
   4 ✓ PASS  PKCE S256                      generated a 43-character code verifier from the system CSPRNG and its S256 challenge; `state` is an independent 256-bit nonce  [RFC 7636 §4.1–§4.2]
   5 ✓ PASS  Loopback redirect              listening for the authorization response on http://127.0.0.1:PORT/jig/callback  [RFC 8252 §7.3 · MCP 2025-06-18 (redirect URIs MUST be localhost or HTTPS)]
   6 ✓ PASS  Client identity                registered dynamically at http://127.0.0.1:PORT/register as a public native client (token_endpoint_auth_method=none, redirect_uris=[http://127.0.0.1:PORT/jig/callback]) → client_id `jig-dcr-client-N`  [RFC 7591 §3.1–§3.2.1]
   7 ✓ PASS  Authorization request          sent response_type=code with code_challenge_method=S256, a CSPRNG `state`, resource=http://127.0.0.1:PORT/mcp, scope=mcp:tools mcp:resources — --no-browser: the URL was printed, not opened  [OAuth 2.1 §4.1.1 · RFC 7636 §4.3 · RFC 8707 §2]
   8 ✓ PASS  Authorization response         received an authorization code on the loopback redirect; its `state` matches the generated nonce (constant-time) and its `iss` matches the metadata issuer (RFC 9207)  [OAuth 2.1 §4.1.2 · §7.12 · RFC 9207 §2.4]
   9 ✓ PASS  Token exchange                 redeemed the authorization code with the PKCE verifier at http://127.0.0.1:PORT/token → a Bearer token, expires_in=3600s, scope=mcp:tools mcp:resources, refresh token issued (the token itself is never printed)  [OAuth 2.1 §4.1.3–§4.1.4 · RFC 7636 §4.5 · RFC 8707 §2]
  10 ✓ PASS  Authenticated MCP session      authenticated session established with jig-mock-server 0.5.0 (protocol 2025-06-18): 3 tool(s) visible  [MCP 2025-06-18 (Access Token Usage)]

Authenticated probe
  server    jig-mock-server 0.5.0 (protocol 2025-06-18)
  tools     3 visible — echo, make_reservation, always_fails
  scope     mcp:tools mcp:resources
  expires   in 3600s

Secrets: the access token, refresh token, authorization code and PKCE verifier are not printed here, are not in --json, and are redacted in the tap. `--token-out <file>` is the only way any of them reaches disk.
A refresh token was issued. jig does not refresh: this command mints one token and proves it. Re-run to get another.
